[project]
name = "few-shot-erasing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==0.32.1",
    "clean-fid==0.1.35",
    "diffusers==0.21.4",
    "matplotlib==3.9.0",
    "pandas==2.2.2",
    "pillow==11.3.0",
    "timm==1.0.8",
    "tqdm==4.66.3",
    "transformers==4.53.0",
]
