[project]
name = "few-shot-erasing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "clean-fid==0.1.35",
    "diffusers>=0.37.0",
    "matplotlib==3.10.6",
    "pandas==2.2.2",
    "pillow>=12.2.0",
    "timm>=1.0.27",
    "tqdm==4.66.3",
    "transformers>=5",
]
